--- a/MyProject/config.json
+++ b/MyProject/config.json
@@ -1,5 +1,5 @@
 {
-  "source": ["tokens/tokens/tokens.json"],
+  "source": ["tokens/tokens.json"],
   "platforms": {
     "scss": {
       "transformGroup": "scss",
